<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DroidLab</string>

    <!-- Menu -->
    <string name="profile_button">Profile</string>
    <string name="action_lock_orientation">Lock orientation</string>
    <string name="action_logout">Logout</string>
    <string name="action_save">Save</string>
    <string name="action_open">Open</string>

    <!-- Tabs -->
    <string name="title_section1">Commits</string>
    <string name="title_section2">Issues</string>
    <string name="title_section3">Files</string>
    <string name="title_section4">Users</string>

    <!-- Login -->
    <string name="login_button">Login</string>
    <string name="url_hint">URL&#8230; (e.g. https://gitlab.com)</string>
    <string name="user_hint">Username or Email&#8230;</string>
    <string name="password_hint">Password&#8230;</string>
    <string name="token_hint">Private token&#8230;</string>
    <string name="login_activity">Login</string>
    <string name="login_progress_dialog">Logging in. Please wait&#8230;</string>
    <string name="token_link"><u>Login using private token&#8230;</u></string>
    <string name="normal_link"><u>Login using username or email&#8230;</u></string>
    <string name="certificate_title">Certificate not trusted</string>
    <string name="certificate_message">The certificate the server used was not issued by a trusted authority.\n\nThis could mean a hacker is trying to intercept your communications.\n\nTo use a self-signed certificate, please follow this <a href="https://support.google.com/nexus/answer/2844832?hl=en">guide</a>.</string>

    <!-- Error messages -->
    <string name="connection_error">Connection failed&#8230;</string>
    <string name="connection_error_commits">Failed to load commits&#8230;</string>
    <string name="connection_error_issues">Failed to load issues&#8230;</string>
    <string name="connection_error_files">Failed to load files&#8230;</string>
    <string name="connection_error_users">Failed to load users&#8230;</string>

    <string name="login_error">Login failed&#8230; Please double-check your login information.</string>
    <string name="login_input_error">Please enter a valid url.</string>

    <string name="file_load_error">Failed to load file&#8230;</string>
    <string name="save_error">Could not write to storage medium</string>
    <string name="open_error">File could not be opened</string>

    <string name="input_error">Please enter a title</string>
    <string name="user_error">User could not be added&#8230;</string>
    <string name="user_remove_error">User could not be removed&#8230;</string>

    <string name="files_not_supported">To browse files GitLab 5.3 or higher is needed&#8230;</string>
    <string name="groups_not_supported">To add and remove users from groups GitLab 6.1 or higher is needed&#8230;</string>
    <string name="not_in_group">User management is only available for projects that are assigned to groups&#8230;</string>

    <!-- General -->
    <string name="projects">Projects</string>
    <string name="selected_content_description">Selected</string>
    <string name="main_progress_dialog">Connecting to server. Please wait&#8230;</string>
    <string name="progress_dialog">Please wait&#8230;</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="add_button">Add</string>
    <string name="remove_button">Remove</string>
    <string name="ok_button">OK</string>
    <string name="filter_projects">Filter projects&#8230;</string>

    <!-- Commits -->
    <string name="copy_notification">URL copied to clipboard&#8230;</string>

    <!-- Diffs -->
    <string name="text_wrap_checkbox">Wrap text</string>

    <!-- Files -->
    <string name="file_saved">File saved successfully to Download folder</string>

    <!-- Issues -->
    <string name="new_note_hint">Add comment&#8230;</string>
    <string name="add_issue">Add new issue&#8230;</string>
    <string name="add_issue_dialog_title">New issue</string>
    <string name="title_hint">Title&#8230;</string>
    <string name="description_hint">Description&#8230;</string>
    <string name="add_note_content_description">Add note&#8230;</string>

    <!-- User -->
    <string name="remove_user_dialog_title">Remove user?</string>
    <string name="add_user">Add user to group</string>
    <string name="add_user_dialog_title">Add user</string>

    <!-- profile -->
    <string name="email">Email&#160;&#160;&#160;&#160;&#160;</string>
    <string name="public_email">Public email</string>
    <string name="skype">Skype&#160;&#160;&#160;&#160;</string>
    <string name="linkedin">Linkedin</string>
    <string name="twitter">Twitter&#160;&#160;&#160;</string>
    <string name="website">Website&#160;&#160;</string>
    <string name="location">Location</string>
    <string name="bio">Bio&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>

    <string-array name="role_names">
        <item>Guest</item>
        <item>Reporter</item>
        <item>Developer</item>
        <item>Master</item>
        <item>Owner</item>
    </string-array>

</resources>