<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp">

    <ImageView
        android:layout_marginLeft="30dp"
        android:id="@+id/avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <EditText
        android:textSize="20sp"
        android:paddingRight="30dp"
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/avatar"
        android:layout_alignTop="@+id/avatar"
        android:layout_toRightOf="@+id/avatar"
        android:background="@null"
        android:gravity="center" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_below="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/profile_layouit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/email"
                style="@style/profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/email_text"
                style="@style/profile_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            style="@style/profile_layouit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/public_email"
                style="@style/profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/public_email_text"
                style="@style/profile_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            style="@style/profile_layouit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/skype"
                style="@style/profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/skype_text"
                style="@style/profile_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            style="@style/profile_layouit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/linkedin"
                style="@style/profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/linkidin_text"
                style="@style/profile_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            style="@style/profile_layouit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/twitter"
                style="@style/profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/twitter_text"
                style="@style/profile_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            style="@style/profile_layouit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/website"
                style="@style/profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/website_text"
                style="@style/profile_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            style="@style/profile_layouit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/bio"
                style="@style/profile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/bio_text"
                style="@style/profile_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
